--- a/protoss_builds.yml
+++ b/protoss_builds.yml
@@ -16,33 +16,33 @@ BuildChoices:
     test_123:
         BotName: Test
         Cycle:
-            - DummyOpening
+            - ThreeGateStalker
 
     Protoss:
         BotName: ProtossRace
         Cycle:
-            - DummyOpening
+            - ThreeGateStalker
 
     Random:
         BotName: RandomRace
         Cycle:
-            - DummyOpening
+            - ThreeGateStalker
 
     Terran:
         BotName: TerranRace
         Cycle:
-            - DummyOpening
+            - ThreeGateStalker
 
     Zerg:
         BotName: ZergRace
         Cycle:
-            - DummyOpening
+            - ThreeGateStalker
 
     # Can also use specific opponent ids (overrides race options above)
     a_bot_opponent_id_from_aiarena:
         BotName: QueenBot
         Cycle:
-            - DummyOpening
+            - ThreeGateStalker
 
 Builds:
     DummyOpening:
@@ -53,5 +53,16 @@ Builds:
             #           '15 worker', '16 gateway']
             # See docs: https://aressc2.github.io/ares-sc2/tutorials.html#build-runner-system
             []
-
+    ThreeGateStalker:
+        # Build constant workers till x supply
+        ConstantWorkerProductionTill: 22
+        OpeningBuildOrder:
+            - 13 pylon
+            - 15 gateway
+            - 15 gas
+            - 18 cyberneticscore
+            - 18 gas
+            - 19 pylon
+            - 20 gateway
+            - 21 gateway
 
