Update units composition and protoss build order. Tried base expansion but performance is worse. So disabled it for now.

--- a/protoss_builds.yml
+++ b/protoss_builds.yml
@@ -60,9 +60,14 @@ Builds:
             - 13 pylon
             - 15 gateway
             - 15 gas
+            - 16 pylon
             - 18 cyberneticscore
             - 18 gas
             - 19 pylon
             - 20 gateway
             - 21 gateway
+            - 30 pylon x3
+            - 40 gateway x2
+            - 50 cyberneticscore
+            - 60 gateway x3
 
